Add button transformations

--- a/index.html
+++ b/index.html
@@ -119,6 +119,26 @@ button {
   width: 100%;
 }
 
+.button.transform-plus-2 {
+  transform: rotate(2deg);
+}
+
+.button.transform-plus-3 {
+  transform: rotate(3deg);
+}
+
+.button.transform-minus-3 {
+  transform: rotate(-3deg);
+}
+
+.button.transform-minus-4 {
+  transform: rotate(-4deg);
+}
+
+.button.transform-plus-4 {
+  transform: rotate(4deg);
+}
+
 .button:focus {
   outline: 0;
 }
@@ -155,19 +175,19 @@ button {
           <button class="button">frequency</button>
         </div>
         <div class="darkred-circle circle">
-          <button class="button">amplitude</button>
+          <button class="button transform-plus-2">amplitude</button>
         </div>
         <div class="redorange-circle circle">
-          <button class="button">phase</button>
+          <button class="button transform-minus-3">phase</button>
         </div>
         <div class="darkorange-circle circle">
-          <button class="button">wavelength</button>
+          <button class="button transform-plus-3">wavelength</button>
         </div>
         <div class="orange-circle circle">
-          <button class="button">interference</button>
+          <button class="button transform-plus-4">interference</button>
         </div>
         <div class="pumpkin-circle circle">
-          <button class="button">harmonics</button>
+          <button class="button transform-minus-4">harmonics</button>
         </div>
       </div>
     </section>
