--- a/index.html
+++ b/index.html
@@ -176,19 +176,24 @@ button {
           <audio id="frequency-elem" data-button-selector="#play-frequency" src="audio/01-Frequency.mp3"></audio>
         </div>
         <div class="darkred-circle circle">
-          <button class="button transform-plus-2">amplitude</button>
+          <button class="button transform-plus-2" id="play-amplitude" data-playing="false" role="switch" aria-checked="false">amplitude</button>
+          <audio id="amplitude-elem" data-button-selector="#play-amplitude" src="audio/02-Amplitude.mp3"></audio>
         </div>
         <div class="redorange-circle circle">
-          <button class="button transform-minus-3">phase</button>
+          <button class="button transform-minus-3" id="play-phase" data-playing="false" role="switch" aria-checked="false">phase</button>
+          <audio id="phase-elem" data-button-selector="#play-phase" src="audio/03-Phase.mp3"></audio>
         </div>
         <div class="darkorange-circle circle">
-          <button class="button transform-plus-3">wavelength</button>
+          <button class="button transform-plus-3" id="play-wavelength" data-playing="false" role="switch" aria-checked="false">wavelength</button>
+          <audio id="wavelength-elem" data-button-selector="#play-wavelength" src="audio/04-Wavelength.mp3"></audio>
         </div>
         <div class="orange-circle circle">
-          <button class="button transform-plus-4">interference</button>
+          <button class="button transform-plus-4" id="play-interference" data-playing="false" role="switch" aria-checked="false">interference</button>
+          <audio id="interference-elem" data-button-selector="#play-interference" src="audio/05-Interference.mp3"></audio>
         </div>
         <div class="pumpkin-circle circle">
-          <button class="button transform-minus-4">harmonics</button>
+          <button class="button transform-minus-4" id="play-harmonics" data-playing="false" role="switch" aria-checked="false">harmonics</button>
+          <audio id="harmonics-elem" data-button-selector="#play-harmonics" src="audio/06-Harmonics.mp3"></audio>
         </div>
       </div>
     </section>
@@ -196,7 +201,6 @@ button {
   <script>
     // Frequency, Amplitude, Phase, Wavelength, Interference, Harmonics
     const audioContext = new AudioContext();
-    // const playButtons = document.querySelectorAll("button");
     const audioElements = Array.from(document.querySelectorAll("audio"));
 
     audioElements.forEach((elem) => {
@@ -204,6 +208,7 @@ button {
       const playButton = document.querySelector(elem.dataset.buttonSelector);
 
       track.connect(audioContext.destination);
+
       playButton.addEventListener(
         "click",
         () => {
