Fix panning on one element

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ button {
         <div class="pumpkin-circle circle">
           <button class="button transform-minus-4" id="play-harmonics" data-playing="false" role="switch" aria-checked="false">harmonics</button>
           <input id="harmonics-pan" type="range" min="-1" max="1" step="0.1" value=".2">
-          <audio id="harmonics-elem" data-button-selector="#play-harmonics" data-pan-selector="#interference-harmonics" src="audio/06-Harmonics.mp3"></audio>
+          <audio id="harmonics-elem" data-button-selector="#play-harmonics" data-pan-selector="#interference-pan" src="audio/06-Harmonics.mp3"></audio>
         </div>
       </div>
     </section>
